# DefinitelyNotMinecraft

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  clang-format  format-all.sh
.github/workflows/: cmake-multi-platform.yml
DefinitelyNotMinecraft/: CMakeLists.txt  DefinitelyNotMinecraft.cpp  DefinitelyNotMinecraft.hpp
DefinitelyNotMinecraft/Core/: Chrono.hpp  Config.hpp  Formatter.hpp  GLMInclude.hpp  GPUProfiller.hpp  GlobalNewOverride.cpp  Handle.hpp  Math.cpp  Math.hpp  ShortTypes.hpp  StringInterner.hpp
DefinitelyNotMinecraft/Logic/: BlockWorld.cpp  BlockWorld.hpp  Camera.cpp  Camera.hpp  GizmoData.hpp  Imgui.cpp  Imgui.hpp  Input.cpp  Input.hpp
DefinitelyNotMinecraft/Rendering/: GlobalBuffers.hpp  RAIIUtils.cpp  RAIIUtils.hpp  RenderGraph.cpp  RenderGraph.hpp  Renderer.cpp  Renderer.hpp  ShaderWatcher.cpp  ShaderWatcher.hpp  Shaders.cpp  Shaders.hpp
DefinitelyNotMinecraft/RenderingModule/: BlockRenderingModule.cpp  BlockRenderingModule.hpp  ForwardRenderingModule.cpp  ForwardRenderingModule.hpp  GizmoRenderingModule.cpp  GizmoRenderingModule.hpp  ImguiRenderingModule.cpp  ImguiRenderingModule.hpp
DefinitelyNotMinecraft/RenderingNodes/: BlockRenderingNode.cpp  BlockRenderingNode.hpp  ForwardRenderingNode.cpp  ForwardRenderingNode.hpp  GizmoRenderingNode.cpp  GizmoRenderingNode.hpp  IRenderingNode.hpp  ImguiRenderingNode.cpp  ImguiRenderingNode.hpp
DefinitelyNotMinecraft/Shader/: ReflectedShader.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderReflector.cpp  ShaderReflector.hpp
DefinitelyNotMinecraft/Shaders/: BlockWorldBuffer.glsl  BlockWorldUtil.glsl  CameraBuffer.glsl  DrawCallGenerationWorld.comp  Gizmo.frag  Gizmo.vert  World.frag  World.vert
